modify media queries on new page

--- a/new-2.html
+++ b/new-2.html
@@ -9,10 +9,44 @@
 </head>
 <body>
    <header>
-       
-        <h1> Foley's</h1>
-        <h2> link--------link---------link-------link--------link------link </h2>
+    <div class="foley-name">
+        <h1>            
+            Foley's butchers            
+        </h1>
+        <p>Est. 2004</p> 
+    </div> 
+     
+     <!--Navigation Menu-->
+    <div class="nav-div">
+        <nav id="menu">
+            <ul>
+                    <!--Dropdown from W3 school tutorial for dropdown menu - adjusted for this site
+                    https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->
+                <li><a href="index.html" class="dropbtn active">Home</a></li>
+                <li class="dropdown">
+                    <a href="products.html" class="dropbtn">Products</a>
+                    <div class="dropdown-content">
+                        <a href="#">Lamb</a>
+                        <a href="#">Poultry</a>                     
+                        <a href="#">Beef</a>
+                        <a href="#">Pork</a>
+                        <a href="#">Special Offers</a>
+                        <a href="#">Meat Counter</a>
+                    </div>
+                </li>
+                <li><a href="#" class="dropbtn">About us</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Rewards</a>
+                </li>
+                <li class="dropdown"><a href="#" class="dropbtn">Contact</a>
+                </li>               
+            </ul>        
+        </nav>
+    </div>
+        <!-- <h1> Foley's</h1>
+        <h2> link--------link---------link-------link--------link------link </h2> -->
    </header>
+   
    <section class="hero section">
        <div class="hero-section-inner">
             <h1 class="foleys-name">Welcome to Foleys</h1>
